// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SearchSuggestions > SearchSuggestions - Snapshots > matches snapshot while suggestions load 1`] = `
<div
  aria-busy="true"
  class="absolute top-full right-0 left-0 z-50 overflow-y-auto rounded-t-none rounded-b-2xl border-x border-b border-border"
  data-override-defaults="true"
  data-testid="search-suggestions"
  role="region"
  style="background: linear-gradient(180deg, var(--background) 0%, rgba(5, 5, 10, 0.50) 100%); backdrop-filter: blur(25px); box-shadow: 0px 50px 100px rgba(0, 0, 0, 1); max-height: 300px;"
>
  <div
    class="flex flex-col space-y-6 px-6 pt-3 pb-6"
    data-override-defaults="true"
    data-testid="container"
  >
    <div
      aria-hidden="true"
      class="flex flex-col space-y-6"
      data-override-defaults="true"
      data-testid="search-suggestions-skeleton"
    >
      <div
        class="flex flex-col gap-2"
        data-override-defaults="true"
        data-testid="container"
      >
        <div
          class="animate-pulse bg-muted h-4 w-12 rounded-md"
          data-slot="skeleton"
        />
        <div
          class="flex flex-wrap gap-2"
          data-override-defaults="true"
          data-testid="container"
        >
          <div
            class="animate-pulse bg-muted h-8 w-20 rounded-md"
            data-slot="skeleton"
          />
          <div
            class="animate-pulse bg-muted h-8 w-20 rounded-md"
            data-slot="skeleton"
          />
          <div
            class="animate-pulse bg-muted h-8 w-20 rounded-md"
            data-slot="skeleton"
          />
        </div>
      </div>
      <div
        class="flex flex-col gap-2"
        data-override-defaults="true"
        data-testid="container"
      >
        <div
          class="animate-pulse bg-muted h-4 w-12 rounded-md"
          data-slot="skeleton"
        />
        <div
          class="flex flex-wrap gap-x-6 gap-y-3"
          data-override-defaults="true"
          data-testid="container"
        >
          <div
            class="flex items-center gap-2"
            data-override-defaults="true"
            data-testid="container"
          >
            <div
              class="animate-pulse bg-muted size-8 shrink-0 rounded-full"
              data-slot="skeleton"
            />
            <div
              class="space-y-1.5"
              data-override-defaults="true"
              data-testid="container"
            >
              <div
                class="animate-pulse bg-muted h-4 w-32 rounded-md"
                data-slot="skeleton"
              />
              <div
                class="animate-pulse bg-muted h-3 w-24 rounded-md"
                data-slot="skeleton"
              />
            </div>
          </div>
          <div
            class="flex items-center gap-2"
            data-override-defaults="true"
            data-testid="container"
          >
            <div
              class="animate-pulse bg-muted size-8 shrink-0 rounded-full"
              data-slot="skeleton"
            />
            <div
              class="space-y-1.5"
              data-override-defaults="true"
              data-testid="container"
            >
              <div
                class="animate-pulse bg-muted h-4 w-32 rounded-md"
                data-slot="skeleton"
              />
              <div
                class="animate-pulse bg-muted h-3 w-24 rounded-md"
                data-slot="skeleton"
              />
            </div>
          </div>
          <div
            class="flex items-center gap-2"
            data-override-defaults="true"
            data-testid="container"
          >
            <div
              class="animate-pulse bg-muted size-8 shrink-0 rounded-full"
              data-slot="skeleton"
            />
            <div
              class="space-y-1.5"
              data-override-defaults="true"
              data-testid="container"
            >
              <div
                class="animate-pulse bg-muted h-4 w-32 rounded-md"
                data-slot="skeleton"
              />
              <div
                class="animate-pulse bg-muted h-3 w-24 rounded-md"
                data-slot="skeleton"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <button
      class="inline-flex items-center justify-center whitespace-nowrap text-sm transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*=\\"size-\\"])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/40 aria-invalid:border-destructive font-semibold cursor-pointer rounded-full border shadow-xs bg-secondary text-secondary-foreground hover:bg-accent h-8 gap-1.5 px-3 has-[>svg]:px-3.5 self-start"
      data-size="sm"
      data-slot="button"
      data-variant="secondary"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-search"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m21 21-4.34-4.34"
        />
        <circle
          cx="11"
          cy="11"
          r="8"
        />
      </svg>
      Show all results
    </button>
  </div>
</div>
`;

exports[`SearchSuggestions > SearchSuggestions - Snapshots > matches snapshot with empty hot tags 1`] = `
<div
  class="absolute top-full right-0 left-0 z-50 overflow-y-auto rounded-t-none rounded-b-2xl border-x border-b border-border"
  data-override-defaults="true"
  data-testid="search-suggestions"
  role="region"
  style="background: linear-gradient(180deg, var(--background) 0%, rgba(5, 5, 10, 0.50) 100%); backdrop-filter: blur(25px); box-shadow: 0px 50px 100px rgba(0, 0, 0, 1); max-height: 300px;"
>
  <div
    class="flex flex-col space-y-6 px-6 pt-3 pb-6"
    data-override-defaults="true"
    data-testid="container"
  />
</div>
`;

exports[`SearchSuggestions > SearchSuggestions - Snapshots > matches snapshot with hot tags 1`] = `
<div
  class="absolute top-full right-0 left-0 z-50 overflow-y-auto rounded-t-none rounded-b-2xl border-x border-b border-border"
  data-override-defaults="true"
  data-testid="search-suggestions"
  role="region"
  style="background: linear-gradient(180deg, var(--background) 0%, rgba(5, 5, 10, 0.50) 100%); backdrop-filter: blur(25px); box-shadow: 0px 50px 100px rgba(0, 0, 0, 1); max-height: 300px;"
>
  <div
    class="flex flex-col space-y-6 px-6 pt-3 pb-6"
    data-override-defaults="true"
    data-testid="container"
  >
    <div
      data-testid="section-hot-tags"
    >
      <span>
        Hot tags
      </span>
      <button
        data-testid="tag-pubky"
      >
        pubky
      </button>
      <button
        data-testid="tag-keys"
      >
        keys
      </button>
    </div>
  </div>
</div>
`;

exports[`SearchSuggestions > SearchSuggestions - Snapshots > matches snapshot with the full-text action 1`] = `
<div
  class="absolute top-full right-0 left-0 z-50 overflow-y-auto rounded-t-none rounded-b-2xl border-x border-b border-border"
  data-override-defaults="true"
  data-testid="search-suggestions"
  role="region"
  style="background: linear-gradient(180deg, var(--background) 0%, rgba(5, 5, 10, 0.50) 100%); backdrop-filter: blur(25px); box-shadow: 0px 50px 100px rgba(0, 0, 0, 1); max-height: 300px;"
>
  <div
    class="flex flex-col space-y-6 px-6 pt-3 pb-6"
    data-override-defaults="true"
    data-testid="container"
  >
    <button
      class="inline-flex items-center justify-center whitespace-nowrap text-sm transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*=\\"size-\\"])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/40 aria-invalid:border-destructive font-semibold cursor-pointer rounded-full border shadow-xs bg-secondary text-secondary-foreground hover:bg-accent h-8 gap-1.5 px-3 has-[>svg]:px-3.5 self-start"
      data-size="sm"
      data-slot="button"
      data-variant="secondary"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-search"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m21 21-4.34-4.34"
        />
        <circle
          cx="11"
          cy="11"
          r="8"
        />
      </svg>
      Show all results
    </button>
  </div>
</div>
`;
